actualizacion ingresos detalles

--- a/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
+++ b/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
@@ -1280,7 +1280,7 @@
                     </dxi-column>
                 </dxi-column>
 
-                <dxi-column dataField="notasCredito" caption="Notas Crédito " alignment="left" headerCellTemplate="headerTemplate">
+                <dxi-column dataField="notasCredito" caption="Notas Crédito " alignment="right" [width]="120" headerCellTemplate="headerTemplate">
                     <dxo-format type="currency" [precision]="3"> </dxo-format>
                 </dxi-column>
 
