--- a/src/app/pages/rentabilidadViajes/rentabilidadViajes.component.html
+++ b/src/app/pages/rentabilidadViajes/rentabilidadViajes.component.html
@@ -137,6 +137,7 @@
         <dxi-column dataField="operacion" caption="Operación" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="tipoViaje" caption="Tipo Viaje" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="tipoSegumiento" caption="Tipo Seguimiento" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
+        <dxi-column dataField="cliente" caption="Cliente" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="ruta" caption="Ruta" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
 
 
@@ -147,8 +148,8 @@
         <dxi-column dataField="margenUtilida" caption="Margen Utilidad" [fixed]="false" format="$ #,###,###.##;-$ #,##0.##" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="margenUtilidaPor" caption="%" [fixed]="false" format="percent" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="diasViaje" caption="Días Viaje" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="kmsCargados" caption="Kms. Cargado" [fixed]="false" format="fixedPoint" headerCellTemplate="headerTemplate"></dxi-column>
-        <dxi-column dataField="kmsVacios" caption="Kms. Vacio" [fixed]="false" format="fixedPoint" headerCellTemplate="headerTemplate"></dxi-column>
+        <!-- <dxi-column dataField="kmsCargados" caption="Kms. Cargado" [fixed]="false" format="fixedPoint" headerCellTemplate="headerTemplate"></dxi-column> -->
+        <dxi-column dataField="kms" caption="Kilómentros" [fixed]="false" format="fixedPoint" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="lstDiesel" caption="Lts. Diesel" [fixed]="false" format="fixedPoint" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="rendimiento" caption="Rendimiento" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
         <dxi-column dataField="combustible" caption="Combustible" [fixed]="false" format="$ #,##0.##;-$ #,##0.##" headerCellTemplate="headerTemplate"></dxi-column>
