sequito los asteriscos en los porcenta rentViajes

--- a/src/app/pages/rentabilidadViajes/rentabilidadViajes.component.html
+++ b/src/app/pages/rentabilidadViajes/rentabilidadViajes.component.html
@@ -225,18 +225,18 @@
 
 
             <dxi-total-item column="margenUtilidaPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="{0}"></dxi-total-item>
-            <dxi-total-item column="combustiblePor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="*{0}"></dxi-total-item>
-            <dxi-total-item column="casetasPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="*{0}"></dxi-total-item>
-            <dxi-total-item column="sueldosLiquidacionPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="*{0}"></dxi-total-item>
-            <dxi-total-item column="otrosPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="*{0}"></dxi-total-item>
-            <dxi-total-item column="costosDirectosViajePor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="*{0}"></dxi-total-item>
-            <dxi-total-item column="sueldoBasePor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="*{0}"></dxi-total-item>
-            <dxi-total-item column="cargaSocialNominaPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="*{0}"></dxi-total-item>
-            <dxi-total-item column="fijoMttoPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="*{0}"></dxi-total-item>
-            <dxi-total-item column="varMttoPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="*{0}"></dxi-total-item>
-            <dxi-total-item column="fijoTransPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="*{0}"></dxi-total-item>
-            <dxi-total-item column="varTransPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="*{0}"></dxi-total-item>
-            <dxi-total-item column="costosAdicionalesPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="*{0}"></dxi-total-item>
+            <dxi-total-item column="combustiblePor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="{0}"></dxi-total-item>
+            <dxi-total-item column="casetasPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="{0}"></dxi-total-item>
+            <dxi-total-item column="sueldosLiquidacionPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="{0}"></dxi-total-item>
+            <dxi-total-item column="otrosPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="{0}"></dxi-total-item>
+            <dxi-total-item column="costosDirectosViajePor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="{0}"></dxi-total-item>
+            <dxi-total-item column="sueldoBasePor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="{0}"></dxi-total-item>
+            <dxi-total-item column="cargaSocialNominaPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="{0}"></dxi-total-item>
+            <dxi-total-item column="fijoMttoPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="{0}"></dxi-total-item>
+            <dxi-total-item column="varMttoPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="{0}"></dxi-total-item>
+            <dxi-total-item column="fijoTransPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="{0}"></dxi-total-item>
+            <dxi-total-item column="varTransPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="{0}"></dxi-total-item>
+            <dxi-total-item column="costosAdicionalesPor" summaryType="avg" [valueFormat]="separatorIV" displayFormat="{0}"></dxi-total-item>
 
           <!-- SUMARY DE GRUPO -->
             <dxi-group-item column="margenUtilida" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
