--- a/src/app/pages/indicadores/indicadores.component.html
+++ b/src/app/pages/indicadores/indicadores.component.html
@@ -472,14 +472,14 @@
                         <dxo-header-filter [visible]="true"></dxo-header-filter>
                         
                         <dxi-column dataField="mes" caption="Mes" [fixed]="true"></dxi-column>
-                        <dxi-column dataField="cuatitlan" caption="Cuautitlan" [format]="separatorOUDN"></dxi-column>
-                        <dxi-column dataField="tultitlan" caption="Tultitlan" [format]="separatorOUDN"></dxi-column>
-                        <dxi-column dataField="guadalajara" caption="Guadalajara" [format]="separatorOUDN"></dxi-column>
-                        <dxi-column dataField="hermosillo" caption="Hermosillo" [format]="separatorOUDN"></dxi-column>
-                        <dxi-column dataField="mexicali" caption="Mexicali" [format]="separatorOUDN"></dxi-column>
-                        <dxi-column dataField="orizaba" caption="Orizaba" [format]="separatorOUDN"></dxi-column>
-                        <dxi-column dataField="ramosArizpe" caption="Ramos Arizpe" [format]="separatorOUDN"></dxi-column>
-                        <dxi-column dataField="total" caption="Total" [format]="separatorOUDN"></dxi-column>
+                        <dxi-column dataField="cuatitlan" caption="Cuautitlan" format="#,##0.##;-$ #,##0.##"></dxi-column>
+                        <dxi-column dataField="tultitlan" caption="Tultitlan" format="#,##0.##;-$ #,##0.##"></dxi-column>
+                        <dxi-column dataField="guadalajara" caption="Guadalajara" format="#,##0.##;-$ #,##0.##"></dxi-column>
+                        <dxi-column dataField="hermosillo" caption="Hermosillo" format="#,##0.##;-$ #,##0.##"></dxi-column>
+                        <dxi-column dataField="mexicali" caption="Mexicali" format="#,##0.##;-$ #,##0.##"></dxi-column>
+                        <dxi-column dataField="orizaba" caption="Orizaba" format="#,##0.##;-$ #,##0.##"></dxi-column>
+                        <dxi-column dataField="ramosArizpe" caption="Ramos Arizpe" format="#,##0.##;-$ #,##0.##"></dxi-column>
+                        <dxi-column dataField="total" caption="Total" format="#,##0.##;-$ #,##0.##"></dxi-column>
                         
                    
                         <dxo-group-panel [visible]="false"></dxo-group-panel>
