--- a/src/app/pages/rendimientoDiesel/rendimientoDiesel.component.html
+++ b/src/app/pages/rendimientoDiesel/rendimientoDiesel.component.html
@@ -334,12 +334,12 @@
                 
                         <dxi-column dataField="operador" caption="Operador" [fixed]="true"  [width]="5"></dxi-column>
                 
-                        <dxi-column dataField="noviaje" caption="No. Viaje" [fixed]="true" [width]="100"></dxi-column>
-                        <dxi-column dataField="operacion" caption="Operación" [fixed]="true" [width]="100"></dxi-column>
-                        <dxi-column dataField="tipoViaje" caption="Tipo Viaje" [fixed]="true" [width]="100"></dxi-column>
+                        <dxi-column dataField="noviaje" caption="No. Viaje" [fixed]="true"></dxi-column>
+                        <dxi-column dataField="operacion" caption="Operación" [fixed]="true"></dxi-column>
+                        <dxi-column dataField="tipoViaje" caption="Tipo Viaje" [fixed]="true"></dxi-column>
                         <!-- <dxi-column dataField="tipoSegumiento" caption="Tipo Seguimiento" [fixed]="true" [width]="140"></dxi-column> -->
-                        <dxi-column dataField="cliente" caption="Cliente" [fixed]="true" [width]="180"></dxi-column>
-                        <dxi-column dataField="ruta" caption="Ruta" [fixed]="true" [width]="200"></dxi-column>
+                        <dxi-column dataField="cliente" caption="Cliente" [fixed]="true"></dxi-column>
+                        <dxi-column dataField="ruta" caption="Ruta" [fixed]="true"></dxi-column>
                 
                 
                         <!-- <dxi-column dataField="inicio" caption="Inicio" format="dd-MM-yy HH:mm" type="date" [fixed]="false" [width]="130"></dxi-column>
@@ -349,9 +349,9 @@
                         <dxi-column dataField="margenUtilida" caption="Margen Utilidad" [fixed]="false" format="$ #,###,###.##;-$ #,##0.##" [width]="150"></dxi-column>
                         <dxi-column dataField="margenUtilidaPor" caption="%" [fixed]="false" format="percent" [width]="60"></dxi-column>
                         <dxi-column dataField="diasViaje" caption="Días Viaje" [fixed]="false" [width]="100"></dxi-column> -->
-                        <dxi-column dataField="kms" caption="Kilómentros" [fixed]="false" format="fixedPoint" [width]="130"></dxi-column>
-                        <dxi-column dataField="lstDiesel" caption="Lts. Diesel" [fixed]="false" format="fixedPoint" [width]="100"></dxi-column>
-                        <dxi-column dataField="rendimiento" caption="Rendimiento" [fixed]="false" [width]="130"></dxi-column>
+                        <dxi-column dataField="kms" caption="Kilómentros" [fixed]="false" format="fixedPoint" ></dxi-column>
+                        <dxi-column dataField="lstDiesel" caption="Lts. Diesel" [fixed]="false" format="fixedPoint" ></dxi-column>
+                        <dxi-column dataField="rendimiento" caption="Rendimiento" [fixed]="false" ></dxi-column>
                         <!-- <dxi-column dataField="combustible" caption="Combustible" [fixed]="false" format="$ #,##0.##;-$ #,##0.##" [width]="130"></dxi-column>
                         <dxi-column dataField="combustiblePor" caption="%" format="percent" [fixed]="false" [width]="60"></dxi-column>
                         <dxi-column dataField="casetas" caption="Casetas" [fixed]="false" format="$ #,##0.##;-$ #,##0.##" [width]="100"></dxi-column>
