--- a/src/app/pages/rendimientoDiesel/rendimientoDiesel.component.html
+++ b/src/app/pages/rendimientoDiesel/rendimientoDiesel.component.html
@@ -352,6 +352,7 @@
                         <dxi-column dataField="kms" caption="Kilómentros" [fixed]="false" format="fixedPoint" ></dxi-column>
                         <dxi-column dataField="lstDiesel" caption="Lts. Diesel" [fixed]="false" format="fixedPoint" ></dxi-column>
                         <dxi-column dataField="rendimiento" caption="Rendimiento" [fixed]="false" ></dxi-column>
+                        <dxi-column dataField="" caption=""[width]="20"></dxi-column>
                         <!-- <dxi-column dataField="combustible" caption="Combustible" [fixed]="false" format="$ #,##0.##;-$ #,##0.##" [width]="130"></dxi-column>
                         <dxi-column dataField="combustiblePor" caption="%" format="percent" [fixed]="false" [width]="60"></dxi-column>
                         <dxi-column dataField="casetas" caption="Casetas" [fixed]="false" format="$ #,##0.##;-$ #,##0.##" [width]="100"></dxi-column>
