--- a/src/app/pages/rendimientoDiesel/rendimientoDiesel.component.html
+++ b/src/app/pages/rendimientoDiesel/rendimientoDiesel.component.html
@@ -336,10 +336,10 @@
                 
                         <dxi-column dataField="noviaje" caption="No. Viaje" [fixed]="true"></dxi-column>
                         <dxi-column dataField="operacion" caption="Operación" [fixed]="true"></dxi-column>
-                        <dxi-column dataField="tipoViaje" caption="Tipo Viaje" [fixed]="true"></dxi-column>
+                        <dxi-column dataField="tipoViaje" caption="Tipo" [fixed]="true"></dxi-column>
                         <!-- <dxi-column dataField="tipoSegumiento" caption="Tipo Seguimiento" [fixed]="true" [width]="140"></dxi-column> -->
-                        <dxi-column dataField="cliente" caption="Cliente" [fixed]="true"></dxi-column>
-                        <dxi-column dataField="ruta" caption="Ruta" [fixed]="true"></dxi-column>
+                        <dxi-column dataField="cliente" caption="Cliente" [fixed]="true" [width]="200"></dxi-column>
+                        <dxi-column dataField="ruta" caption="Ruta" [fixed]="true" [width]="250"></dxi-column>
                 
                 
                         <!-- <dxi-column dataField="inicio" caption="Inicio" format="dd-MM-yy HH:mm" type="date" [fixed]="false" [width]="130"></dxi-column>
