--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -62,7 +62,9 @@
             <br>
 
             <div class="dx-field">
+                <h5>Periodo actual: <b>{{ periodoActual }}</b></h5>
                 <div class="dx-field-value d-block mr-0 ml-auto" style="width: 30%;">
+                    
                     <h5>Facturas con carta cobro: <b>{{carteraInfo?.facturasConCarta}}</b></h5>
                     <h5>Facturas sin carta cobro:&nbsp; <b>{{carteraInfo?.facturasSinCarta}}</b></h5>
                     <h5>Total&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -103,6 +105,43 @@
               </dxo-summary>
 
             </dx-data-grid>
+
+            <dx-speed-dial-action label="CERRAR PERIODO" [index]="1" (onClick)="changePeriodoClick()" style="left: -1132px; top: -699px">
+            </dx-speed-dial-action>
+
+            <dx-popup #cerrarOperacion style="margin-top: 0px" [showTitle]="true" title="CERRAR PERIODO" [dragEnabled]="false" [closeOnOutsideClick]="true" [showCloseButton]="true" container=".dx-viewport" [(visible)]="modPeriodo">
+                <dxo-position at="botom" my="center" [of]="positionOf"> </dxo-position>
+               
+                <div *dxTemplate="let data of 'content'">
+                    <dx-scroll-view width="100%" height="100%">
+
+                        <div class="long-title">
+                            <h4>ESTA POR CAMBIAR EL PERIODO DE LA CARTERA, UNA VEZ REALIZADO ESTE PROCESO NO SE PODRA REVERTIR.</h4>
+                          </div>
+        
+                        <form action="" (submit)="guardarCotizacionClick($event)">
+                            <dx-form id="form" [(formData)]="formCierre" validationGroup="customerData" [readOnly]="bolFormSoloLectura">
+                              
+                                <dxi-item itemType="group">
+                                <dxi-item dataField="Contraseña" [editorOptions]="passwordOptions">
+                                  <dxi-validation-rule type="required" message="Contraseña es requerida">
+                                  </dxi-validation-rule>
+                                </dxi-item>
+                                
+                              </dxi-item>
+
+                              <dxi-item itemType="group" [colSpan]="2" [colCount]="2">
+                                <dxi-item itemType="button" horizontalAlignment="right" [buttonOptions]="buttonOptionsCancelar"></dxi-item> 
+                                <dxi-item itemType="button" horizontalAlignment="left" [buttonOptions]="buttonOptions"></dxi-item>
+                              </dxi-item>
+                           
+
+                            </dx-form>
+                          </form>
+                          
+                    </dx-scroll-view>
+                </div>
+            </dx-popup>
         </dxi-item>
 
         <dxi-item title="Detalle">
