--- a/src/app/pages/carteraClientes/carteraClientes.component.scss
+++ b/src/app/pages/carteraClientes/carteraClientes.component.scss
@@ -39,4 +39,12 @@
 .ml-auto { margin-left:auto; } 
 .d-block { display:block; }
 
+::ng-deep .long-title h3 {
+  font-family: 'Segoe UI Light', 'Helvetica Neue Light', 'Segoe UI', 'Helvetica Neue', 'Trebuchet MS', Verdana;
+  font-weight: 200;
+  font-size: 28px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
   
