actualizacion ingresos, ingresos detalles e indicadores

--- a/src/app/pages/ingresosAnuales/ingresos.component.html
+++ b/src/app/pages/ingresosAnuales/ingresos.component.html
@@ -358,6 +358,7 @@
                         <dxi-column dataField="sepPorP" caption="vs Total" [fixed]="false" format="percent" [width]="70"></dxi-column>
                         <dxi-column dataField="sepProyeccion" caption="Proyección" [fixed]="false" [format]="formatValue" [width]="140"></dxi-column>
                         <dxi-column dataField="sepPorProy" caption="vs Pres" [fixed]="false" format="percent" [width]="70"></dxi-column>
+                        <dxi-column dataField="" caption="" [width]="30"></dxi-column>
                     </dxi-column>
                     <!-- <dxi-column caption="Ocutbre">
                         <dxi-column dataField="octubreFlete" caption="Flete" [fixed]="false" [format]="formatValue" [width]="130"></dxi-column>
